--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
-  <script src="gamepad.js"></script>
-  <body></body>
+  <head>
+    <script src="gamepad.js"></script>
+  </head>
+  <body>
+    <div id="noDevices"></div>
+  </body>
 </html>
