--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="gamepad.js"></script>
+        <script src="time.js"></script>
   </head>
   <body>
     <div id="noDevices"></div>
