--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <script src="time.js"></script>
   </head>
   <body>
+
+    <p id="clock"></p>
     <div id="noDevices"></div>
   </body>
 </html>
