--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   </head>
   <body>
 
-    <p id="clock"></p>
+    <p id="clock"
+      style="
+    font-size: 240px;
+    font-weight: 600;
+    text-align: center;
+"></p>
     <div id="noDevices"></div>
   </body>
 </html>
