--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="gamepad.js"></script>
+    <script src="keymap.js"></script>
         <script src="time.js"></script>
   </head>
   <body>
