--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     font-weight: 600;
     text-align: center;
 "></p>
-    <div id="noDevices"></div>
+    <div id="key"></div>
   </body>
 </html>
