--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <script src="keymap.js"></script>
         <script src="time.js"></script>
+        <style>
+          footer{
+            font-size: 10px;
+          }
+        </style>
   </head>
   <body>
 
@@ -12,5 +17,9 @@
     text-align: center;
 "></p>
     <div id="key"></div>
+    <select>
+      <option></option>
+    </select>
+    <footer><a href="https://www.flaticon.com/free-icons/washing-machine" title="washing machine icons">Icons created by Freepik - Flaticon</a></footer>
   </body>
 </html>
