--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
           footer{
             font-size: 10px;
           }
+          .wash {
+            background-image: url("washing-machine.png");
+          }
         </style>
   </head>
   <body>
@@ -18,7 +21,7 @@
 "></p>
     <div id="key"></div>
     <select>
-      <option></option>
+      <option class="wash"></option>
     </select>
     <footer><a href="https://www.flaticon.com/free-icons/washing-machine" title="washing machine icons">Icons created by Freepik - Flaticon</a></footer>
   </body>
