--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
           footer{
             font-size: 10px;
           }
-          .wash {
-            background-image: url("washing-machine.png");
+          input[type="radio"] {
+            visibility: hidden;
           }
         </style>
   </head>
@@ -20,9 +20,8 @@
     text-align: center;
 "></p>
     <div id="key"></div>
-    <select>
-      <option class="wash"></option>
-    </select>
+    <input type="radio" name="sbrubulin" id="wash" />
+    <label for="wash"><img src="washing-machine.png" alt=""></label>
     <footer><a href="https://www.flaticon.com/free-icons/washing-machine" title="washing machine icons">Icons created by Freepik - Flaticon</a></footer>
   </body>
 </html>
