radio ga ga selected

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
           input[type="radio"] {
             visibility: hidden;
           }
+          input[type="radio"]:checked+label {
+            border-color: red;
+          }
+
         </style>
   </head>
   <body>
