--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
           input[type="radio"] {
             visibility: hidden;
           }
+          label{
+            display: inline-block;
+            padding: 2px;
+            border-radius: 5px;
+          }
           input[type="radio"]:checked+label {
-            border-color: red;
+            border: solid 5px red;
           }
 
         </style>
