--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             display: inline-block;
             padding: 2px;
             border-radius: 5px;
+            border: solid 5px blue;
           }
           input[type="radio"]:checked+label {
             border: solid 5px red;
@@ -31,6 +32,8 @@
     <div id="key"></div>
     <input type="radio" name="sbrubulin" id="wash" />
     <label for="wash"><img src="washing-machine.png" alt=""></label>
+    <input type="radio" name="moafood" id="moafood" />
+    <label for="moafood"><img src="dog-food.png" alt=""></label>
     <footer><a href="https://www.flaticon.com/free-icons/washing-machine" title="washing machine icons">Icons created by Freepik - Flaticon</a></footer>
   </body>
 </html>
