--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     text-align: center;
 "></p>
     <div id="key"></div>
-    <input type="radio" name="sbrubulin" id="wash" />
+    <input type="radio" name="gaga" id="wash" />
     <label for="wash"><img src="washing-machine.png" alt=""></label>
-    <input type="radio" name="moafood" id="moafood" />
+    <input type="radio" name="gaga" id="moafood" />
     <label for="moafood"><img src="dog-food.png" alt=""></label>
     <footer><a href="https://www.flaticon.com/free-icons/washing-machine" title="washing machine icons">Icons created by Freepik - Flaticon</a></footer>
   </body>
