--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <style>
           footer{
             font-size: 10px;
+            position: absolute;
+            bottom: 3px;
           }
           input[type="radio"] {
             visibility: hidden;
