--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           input[type="radio"]:checked+label {
             border: solid 5px red;
           }
-
+          input[type="radio"]:focus+label {
+           border-color: green !important;
+          }
         </style>
   </head>
   <body>
