--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           input[type="radio"]:checked+label {
             border: solid 5px red;
           }
-          input[type="radio"]:focus+label {
+         label:focus {
            border-color: green !important;
           }
         </style>
