--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 "></p>
     <div id="key"></div>
     <input type="radio" name="gaga" id="wash" tabindex="0"/>
-    <label for="wash"><img src="washing-machine.png" alt=""></label>
+    <label for="wash"><img src="maquina-de-lavar-ico.png" alt=""></label>
     <input type="radio" name="gaga" id="moafood" />
     <label for="moafood"><img src="dog-food.png" alt=""></label>
     <footer><a href="https://www.flaticon.com/free-icons/washing-machine" title="washing machine icons">Icons created by Freepik - Flaticon</a></footer>
