--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     text-align: center;
 "></p>
     <div id="key"></div>
-    <input type="radio" name="gaga" id="wash" tabindex="0"/>
+    <input type="radio" name="gaga" id="wash" tabindex="0" autofocus/>
     <label for="wash"><img src="lava-roupa-64x64.png" alt=""></label>
     <input type="radio" name="gaga" id="moafood" />
     <label for="moafood"><img src="dog-food.png" alt=""></label>
