--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <p id="clock"
       style="
-    font-size: 140px;
-    font-weight: 600;
+    font-size: 80px;
     text-align: center;
+    font-family: fantasy;
 "></p>
     <div id="key"></div>
     <input type="radio" name="gaga" id="wash" tabindex="0" autofocus checked/>
