--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           input[type="radio"]:checked+label {
             border: solid 5px red;
           }
+          .date{
+            display: block;
+          }
         </style>
   </head>
   <body>
