--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       style="
     font-size: 80px;
     text-align: center;
-    font-family: fantasy;
+    font-family:'Courier New', Courier, monospace
 "></p>
     <div id="key"></div>
     <input type="radio" name="gaga" id="wash" tabindex="0" autofocus checked/>
