--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <label for="wash"><img src="lava-roupa-64x64.png" alt=""></label>
     <input type="radio" name="gaga" id="moafood" />
     <label for="moafood"><img src="dog-food.png" alt=""></label>
+    <!-- Widget Previs&atilde;o de Tempo CPTEC/INPE --><iframe allowtransparency="true" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" src="https://www.cptec.inpe.br/widget/widget.php?p=5676&w=h&c=607065&f=ffffff" height="200px" width="215px"></iframe><noscript>Previs&atilde;o de <a href="http://www.cptec.inpe.br/cidades/tempo/5676">Vila Velha/ES</a> oferecido por <a href="http://www.cptec.inpe.br">CPTEC/INPE</a></noscript><!-- Widget Previs&atilde;o de Tempo CPTEC/INPE -->
     <footer><a href="https://www.flaticon.com/free-icons/washing-machine" title="washing machine icons">Icons created by Freepik - Flaticon</a></footer>
   </body>
 </html>
